Fix URL wrapping in twitter widget

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,6 +33,7 @@ p.timePosted {
     font-size: .8em;
     text-align: right;
     margin-bottom: 0;
+    word-wrap: break-word;
 }
 
 .preview {
